internal class AnimationString
{
    internal static string idle = "Idle";
    internal static string run = "Run";
    internal static string isMoving = "isMoving";
    internal static string isAttack = "isAttack";
    internal static string isSlide = "isSlide";
    internal static string isJump = "isJump";
    internal static string Attack01 = "Attack01";
    internal static string Attack02 = "Attack02";
    internal static string Attack03 = "Attack03";
    internal static string Slide = "Slide";
    internal static string Stand = "Stand";
    internal static string Jump = "Jump";
    internal static string Fall ="Fall";
}
